--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ install:
   - pip3 install --upgrade Cython==0.29.19 virtualenv
   - export PATH=$PATH:~/.local/bin/
   - ls -la
-  - echo "TODO COMPILE 32bit"
-  - yes | cp -f buildozer-32bit.spec buildozer.spec
-  - yes | travis_wait 20 buildozer android debug
+  #- echo "TODO COMPILE 32bit"
+ # - yes | cp -f buildozer-32bit.spec buildozer.spec
+ # - yes | travis_wait 20 buildozer android debug
+  - - yes | buildozer android debug
   - ls -la
   - ls bin/ -l
   - echo "TODO"
