--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ install:
   - sudo apt install -y git zip unzip openjdk-8-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
   - pip3 install --upgrade Cython==0.29.19 virtualenv
   - export PATH=$PATH:~/.local/bin/
-  - ls -la
+  - ls -l
   #- echo "TODO COMPILE 32bit"
  # - yes | cp -f buildozer-32bit.spec buildozer.spec
  # - yes | travis_wait 20 buildozer android debug
-  - - yes | buildozer android debug
-  - ls -la
+  - yes | buildozer android debug
+  - ls -l
   - ls bin/ -l
   - echo "TODO"
   - gem install dpl --pre
